--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "my-test1",
   "version": "0.0.0",
+  "homepage": "https://Gayand-soul.github.io/AngularTest", 
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:myTest1": "node dist/my-test1/server/server.mjs"
+    "serve:ssr:myTest1": "node dist/my-test1/server/server.mjs",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +35,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
